namespace MetaDataAPI.ImageGeneration;

public interface IImageRenderer
{
    public string RenderImage(string url);
}